--- a/Hello World.csproj
+++ b/Hello World.csproj
@@ -44,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnHello.cs" />
+    <Compile Include="FrHello.cs" />
+    <Compile Include="HelloApplication.cs" />
+    <Compile Include="HelloApplicationFactory.cs" />
     <Compile Include="IHello.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
