--- a/Hello World.csproj
+++ b/Hello World.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleVoice.cs" />
     <Compile Include="EnHello.cs" />
     <Compile Include="FrHello.cs" />
     <Compile Include="HelloApplication.cs" />
     <Compile Include="HelloApplicationFactory.cs" />
     <Compile Include="IHello.cs" />
+    <Compile Include="IVoice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
